# OpenHMD-Rift-Debugger

./: .gitmodules  LICENSE  Main.gd  Main.tscn  README.md  meson.build  project.godot
entities/: Trackingvisualisation.tscn
src/: OpenHMDVisualiser.gdns.in  hmdvis.gdnlib.in  module.c  module.h  openhmd-compat.c  openhmddevice.c  openhmddevice.h  openhmdsensor.c  openhmdsensor.h  openhmdvisualiser.c  openhmdvisualiser.h
src/lib/: recording-data.c  recording-data.h  recording-device-simulator.c  recording-device-simulator.h  recording-loader.c  recording-loader.h  recording-sensor-simulator.c  recording-sensor-simulator.h  recording-simulator.c  recording-simulator.h  rift-kalman-6dof-v2.c  rift-kalman-6dof-v2.h  rift-kalman-orient.c  rift-kalman-orient.h
utils/: cvutil.py  dump-recording.c  dump-simulation.c  imu-pose-plot.py  json-log-to-csv.py  models.py  orientation-plot.py  output-pose-plot.py  plot-distortion.py  pose-delays-plot.py  pose-plot.py  position-plot.py  recording-data.c  recording-data.h  sensor-pose-plot.py  utils.c  utils.h
